Fixed horizontal scroll bug

--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,7 @@
 html,
 body {
   overscroll-behavior: none;
+  overflow-x: hidden;
 }
 
 @theme inline {
@@ -38,13 +39,15 @@ body {
 
 .glass-button {
   position: relative;
-  border-image-source: conic-gradient(from 90deg at 0% 0%,
-      rgba(255, 255, 255, 0) -47.02deg,
-      rgba(255, 255, 255, 0.352) 42.98deg,
-      rgba(255, 255, 255, 0) 132.98deg,
-      rgba(255, 255, 255, 0.352) 222.98deg,
-      rgba(255, 255, 255, 0) 312.98deg,
-      rgba(255, 255, 255, 0.352) 402.98deg);
+  border-image-source: conic-gradient(
+    from 90deg at 0% 0%,
+    rgba(255, 255, 255, 0) -47.02deg,
+    rgba(255, 255, 255, 0.352) 42.98deg,
+    rgba(255, 255, 255, 0) 132.98deg,
+    rgba(255, 255, 255, 0.352) 222.98deg,
+    rgba(255, 255, 255, 0) 312.98deg,
+    rgba(255, 255, 255, 0.352) 402.98deg
+  );
   border-image-slice: 1;
   backdrop-filter: blur(15.16px);
   -webkit-backdrop-filter: blur(15.16px);
@@ -59,7 +62,7 @@ body {
 /* Glass Button */
 .glass-button-orange {
   display: inline-block;
-  /* padding: 0.75rem 2rem; */  /* adjust height & width */
+  /* padding: 0.75rem 2rem; */ /* adjust height & width */
   font-size: 1.125rem;
   /* 18px */
   font-weight: 600;
@@ -79,8 +82,7 @@ body {
   /* fully pill-shaped */
 
   /* inner glow + outer drop-shadow */
-  box-shadow:
-    inset 0 10px 30px #ffffff, 0 4px 12px #0000001a;
+  box-shadow: inset 0 10px 30px #ffffff, 0 4px 12px #0000001a;
 
   /* the magic: backdrop blur */
   backdrop-filter: blur(10px);
@@ -88,18 +90,14 @@ body {
 
   text-align: center;
   cursor: pointer;
-  transition:
-    background 0.3s ease,
-    box-shadow 0.3s ease;
+  transition: background 0.3s ease, box-shadow 0.3s ease;
 }
 
 .glass-button:hover {
   background: rgba(255, 255, 255, 0.25);
-  box-shadow:
-    inset 0 2px 6px rgba(255, 255, 255, 0.8),
+  box-shadow: inset 0 2px 6px rgba(255, 255, 255, 0.8),
     0 6px 20px rgba(0, 0, 0, 0.15);
 }
-
 
 /* Utilities layer: your custom classes */
 @layer utilities {
